@@ -1,5 +1,6 @@
 VP 9.2.1 Changelog
 ------------------------
+- add table dimension manager for an easy way to calculate real table dimensions into VP table unit and vice versa
 
 - add a ball throwing feature to VP. To use it check "Throw Balls in Player" in the debug window (ESC -> "Debug Window") and by left clicking and holding the left mouse 
   button you create a new ball and it throws the balls in that direction you move the mouse cursor when you release the left mouse button. If you click on a non 
